--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 /* MAIN */
 
 /* start boostrap */
-.hero_{
+.bg_cyan{
     background-color: #1abc9c;
 }
 
@@ -46,4 +46,38 @@
     border-radius: 50%;
     min-height: 240px;
     background-color: coral;
+}
+
+/* about */
+.paragraph_{
+    min-height: 185px;
+    background-color: darkgreen;
+    border: 1px solid white;
+}
+
+/* contact me */
+.contact_{
+    min-height: 67px;
+    background-color: darkorange;
+}
+
+/* FOOTER */
+
+/* footer up */
+.bg_footer_up{
+    background-color: #3a546d;
+}
+
+.bg_footer_up .col-3{
+    min-height: 160px;
+    background-color: chocolate;
+}
+
+.bg_footer_down{
+    background-color: #2c3e50;
+}
+
+.bg_footer_down .col-2{
+    min-height: 76px;
+    background-color: firebrick;
 }
