--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,10 @@
     background-color: #2c3e50;
 }
 
-.title_logo, .link_{
-    min-height: 60px;
-    background-color: blueviolet;
+
+
+.color_white{
+    color: white;
 }
 
 /* MAIN */
