--- a/css/style.css
+++ b/css/style.css
@@ -4,18 +4,22 @@
     background-color: #2c3e50;
 }
 
-
+.bg_cyan{
+    background-color: #1abc9c;
+}
 
 .color_white{
     color: white;
 }
 
+.bg_black{
+    background-color: #333333;
+}
+
 /* MAIN */
 
 /* start boostrap */
-.bg_cyan{
-    background-color: #1abc9c;
-}
+
 
 .img_title_main{
     min-height: 310px;
