--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,24 @@
     background-color: #2c3e50;
 }
 
+.color_white {
+    color: white;
+}
+
+.color_black{
+    color: #333333;
+}
+
 .bg_cyan{
     background-color: #1abc9c;
 }
 
-.color_white{
-    color: white;
-}
-
 .bg_black{
     background-color: #333333;
+}
+
+.bg_white{
+    background-color: white;
 }
 
 /* MAIN */
@@ -38,6 +46,10 @@
 .info_{
     min-height: 40px;
     background-color: burlywood;
+}
+
+.line_{
+    height: 0.2rem;
 }
 
 /* portfolio */
