--- a/css/style.css
+++ b/css/style.css
@@ -1,71 +1,22 @@
-/* HEADER */
-.navbar_title{
-    min-height: 102px;
-    background-color: #2c3e50;
-}
+.color_white    {color: white;}
 
-.color_white {
-    color: white;
-}
+.color_black    {color: #333333;}
 
-.color_black{
-    color: #333333;
-}
+.color_cyan {color: #1abc9c;}
 
-.color_cyan{
-    color: #1abc9c;
-}
+.bg_cyan    {background-color: #1abc9c;}
 
-.bg_cyan{
-    background-color: #1abc9c;
-}
+.bg_black   {background-color: #333333;}
 
-.bg_black{
-    background-color: #333333;
-}
+.bg_white   { background-color: white;}
 
-.bg_white{
-    background-color: white;
-}
-
-/* MAIN */
+.navbar_title,
+.bg_footer_down {background-color: #2c3e50;}
 
 /* start boostrap */
 
-.title_{
-    min-height: 60px;
-    background-color: blue;
-}
+.line_          {height: 0.2rem;}
 
-.icon_{
-    min-height: 60px;
-    background-color: brown;
-}
-
-.info_{
-    min-height: 40px;
-    background-color: burlywood;
-}
-
-.line_{
-    height: 0.2rem;
-}
-
-/* portfolio */
+.bg_footer_up   {background-color: #3a546d;}
 
 
-/* about */
-
-/* contact me */
-
-
-/* FOOTER */
-
-/* footer up */
-.bg_footer_up{
-    background-color: #3a546d;
-}
-
-.bg_footer_down{
-    background-color: #2c3e50;
-}
